--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
 }
 
 h2 {
+    text-align: center;
+    padding: 1rem;
     margin: 0;
 }
 
@@ -58,4 +60,9 @@ button{
 
 button:hover {
     background-color: #732d91;
+}
+
+button:focus{
+    background-color: #5e3370;
+    outline: none;
 }
